continued work on parachute project, bugfix css to stop screenshots overflowing

--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -115,6 +115,10 @@ a:hover {
   color: var(--highlight-color);
 }
 
+p > img {
+  max-width: 100%;
+}
+
 p code {
   background-color: gainsboro;
   padding-left: 2px;
